// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DescriptionList renders 1`] = `
<div>
  <dl
    class="divide-y divide-zinc-900/20"
  >
    <div
      class="py-6 grid grid-cols-2 gap-2"
    >
      <dt
        class="text-sm font-semibold text-zinc-900"
      >
        term
      </dt>
      <dd
        class="text-sm text-zinc-900 col-span-1"
      >
        description
      </dd>
    </div>
  </dl>
</div>
`;

exports[`DescriptionList renders react nodes 1`] = `
<div>
  <dl
    class="divide-y divide-zinc-900/20"
  >
    <div
      class="py-6 grid grid-cols-2 gap-2"
    >
      <dt
        class="text-sm font-semibold text-zinc-900"
      >
        term
      </dt>
      <dd
        class="text-sm text-zinc-900 col-span-1"
      >
        <span>
          description
        </span>
      </dd>
    </div>
  </dl>
</div>
`;
